--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EventManagementPortal
+application.vendor=vikas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,15 @@ dist.jar=${dist.dir}/EventManagementPortal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EventManagementPortal
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=/Users/vikas/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.13__1_.jar=/Users/vikas/Downloads/mysql-connector-java-8.0.13 (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.13__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EventManagementPortal
-main.class=ui.AuthLayout
+main.class=ui.MainScreen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
